--- a/css/gradient.css
+++ b/css/gradient.css
@@ -4,7 +4,7 @@
 	animation: gradient 13s ease infinite;
 } Gradient, no background image*/
 body {
-  	background-image: linear-gradient(-45deg, rgba(69, 162, 71, 0.5), rgba(40, 60, 134, 0.45), rgba(69, 162, 71, 0.5)), url('../images/msu-campus.jpg');
+  	background-image: linear-gradient(-45deg, rgba(69, 162, 71, 0.5), rgba(40, 60, 134, 0.45), rgba(69, 162, 71, 0.5)), url('/images/msu-campus.jpg');
 	background-size: 115% 115%;
 	animation: gradient 23s ease infinite;
 }
