--- a/css/gradient.css
+++ b/css/gradient.css
@@ -1,13 +1,31 @@
-/*body {
-	background: linear-gradient(-45deg, #134E5E, #71B280, #283c86, #45a247);
-	background-size: 400% 400%;
-	animation: gradient 13s ease infinite;
-} Gradient, no background image*/
 body {
   	background-image: linear-gradient(-45deg, rgba(69, 162, 71, 0.5), rgba(40, 60, 134, 0.45), rgba(69, 162, 71, 0.5)), url('/images/msu-campus.jpg');
-	background-size: 115% 115%;
+	background-size: 110% 110%;
 	animation: gradient 23s ease infinite;
 }
+
+@media screen and (max-width: 940px) {
+	body {
+		background: linear-gradient(-45deg, #283c86, #45a247, #283c86, #45a247);
+		background-size: 400% 400%;
+		animation: gradient 13s ease infinite;
+	}
+	}
+
+@media screen and (max-width: 940px) {
+	.s128 {
+		min-height: 45vh;
+	}
+	}
+
+@media screen and (max-width: 940px) {
+	.banner {
+		display: block;
+		margin-top: 180px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	}
 
 @keyframes gradient {
 	0% {
