--- a/css/background.css
+++ b/css/background.css
@@ -14,14 +14,14 @@ body {
 
 @media screen and (max-width: 940px) {
 	.s128 {
-		min-height: 45vh;
+		min-height: 30vh;
 	}
 	}
 
 @media screen and (max-width: 940px) {
 	.banner {
 		display: block;
-		margin-top: 180px;
+		margin-top: 150px;
 		margin-left: auto;
 		margin-right: auto;
 	}
@@ -37,4 +37,14 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+/*Select2 box*/
+.select2-selection__rendered {
+    line-height: 50px !important;
+}
+.select2-container .select2-selection--single {
+    height: 50px !important;
+}
+.select2-selection__arrow {
+    height: 50px !important;
 }
