Updated some careers/salaries and changed preloader color

--- a/css/preloader.css
+++ b/css/preloader.css
@@ -23,7 +23,7 @@ animation: loader 2s infinite ease;
 vertical-align: top;
 display: inline-block;
 width: 100%;
-background-color: #283c86;
+background-color: #451822;
 animation: loader-inner 2s infinite ease-in;
 }
 
