Select2 centering and fixed elements for smaller screens

--- a/css/image-resources.css
+++ b/css/image-resources.css
@@ -38,3 +38,10 @@ transition: 1s ease;
     height: 30%;
   }
 	}
+
+  @media screen and (max-width: 1400px) {
+    #resources img {
+      width: 30%;
+      height: 30%;
+    }
+    }
