--- a/css/background.css
+++ b/css/background.css
@@ -4,20 +4,24 @@ body {
 	animation: gradient 23s ease infinite;
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 940px) { /*For Mobile*/
 	body {
 		background: linear-gradient(-45deg, #283c86, #45a247, #283c86, #45a247);
 		background-size: 400% 400%;
 		animation: gradient 13s ease infinite;
 	}
 	.s128 {
-		min-height: 30vh;
+		min-height: 35vh;
 	}
 	.banner {
 		display: block;
 		margin-top: 150px;
 		margin-left: auto;
 		margin-right: auto;
+	}
+	#quiz_btn {
+		width: 100%;
+    	height: 100%;
 	}
 	}
 
@@ -50,6 +54,7 @@ body {
 	padding: 12px 16px;
 	font-size: 16px;
 	cursor: pointer;
+	font-family: 'Poppins', sans-serif;
   }
 
 #quiz_btn:hover {
@@ -74,7 +79,7 @@ body {
 	background-color: #18453B;
 	margin: 5% auto; /* 15% from the top and centered */
 	padding: 20px;
-	border: 3px solid #Fff;
+	border: 4px solid #Fff;
 	width: 60%; /* Could be more or less, depending on screen size */
   }
   
@@ -106,6 +111,25 @@ body {
 
 .btn {
 	margin: 0 30px 0 30px;
+	padding: 4px 8px;
+}
+
+#submit-btn {
+	font-weight: bold;
+	border: none;
+	padding: 12px 16px;
+	font-size: 18px;
+	cursor: pointer;
+	font-family: 'Poppins', sans-serif;
+}
+
+#retake-btn {
+	font-weight: bold;
+	border: none;
+	padding: 12px 16px;
+	font-size: 18px;
+	cursor: pointer;
+	font-family: 'Poppins', sans-serif;
 }
 
 .btn-agree {
