--- a/css/background.css
+++ b/css/background.css
@@ -49,6 +49,7 @@ body {
 
 #quiz_btn {
 	background-color: #18453B;
+	transition: all 0.25s ease;
 	border: none;
 	color: white;
 	padding: 12px 16px;
@@ -142,7 +143,8 @@ body {
 .btn-agree:active:focus,
 .btn-agree.active:focus,
 .btn-agree:hover {
-	background-color: transparent;
+	background-color: RoyalBlue;
+	transition: all 0.25s ease
 }
 
 .bottom {
