--- a/css/image-resources.css
+++ b/css/image-resources.css
@@ -39,8 +39,8 @@ transition: 1s ease;
     height: 30%;
   }
   .zippia {
-    margin-left: -15%;
-    margin-right: -4%;
+    margin-left: -16%;
+    margin-right: -3;
   }
 	}
 
