--- a/css/background.css
+++ b/css/background.css
@@ -6,9 +6,10 @@ body {
 
 @media screen and (max-width: 940px) { /*For Mobile*/
 	body {
-		background: linear-gradient(-45deg, #283c86, #45a247, #283c86, #45a247);
-		background-size: 400% 400%;
-		animation: gradient 13s ease infinite;
+		/*background: linear-gradient(-45deg, #283c86, #45a247, #283c86, #45a247); Gradient, no background image*/
+		background-image: linear-gradient(-45deg, rgba(69, 162, 71, 0.5), rgba(40, 60, 134, 0.45), rgba(69, 162, 71, 0.5)), url('/images/msu-campus.jpg');
+		background-size: 250% 100%;
+		animation: gradient 70s ease infinite;
 	}
 	.s128 {
 		min-height: 30vh;
