--- a/css/background.css
+++ b/css/background.css
@@ -76,10 +76,24 @@ body {
 	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
 
-@media screen and (max-width: 940px) {
+@media screen and (min-device-width: 375px) and (max-device-width: 812px) {
 	.modal {
-		width: 160%;
-    	left: -112px;
+		width: 150%;
+    	left: -93px;
+	}
+}
+
+@media screen and (device-width: 280px) and (max-device-width: 653px) {
+	.modal {
+		width: 158%;
+    	left: -80px;
+	}
+}
+
+@media screen and (min-device-width: 768px) {
+	.modal {
+		width: 150%;
+    	left: -190px;
 	}
 }
 
