Changed review modal positioning on smaller screens

--- a/css/image-resources.css
+++ b/css/image-resources.css
@@ -198,6 +198,12 @@ transition: 1s ease;
   }
 }
 
+@media screen and (max-width: 1400px) {
+  .modal {
+    left: -140px;
+  }
+}
+
   /* Modal Content/Box */
   .modal-content {
 	background-color: #18453B;
