--- a/css/image-resources.css
+++ b/css/image-resources.css
@@ -198,7 +198,7 @@ transition: 1s ease;
   }
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (min-width: 1000px) and (max-width: 1400px) {
   .modal {
     left: -140px;
   }
