--- a/css/image-resources.css
+++ b/css/image-resources.css
@@ -164,6 +164,10 @@ transition: 1s ease;
 	background-color: RoyalBlue;
   }
 
+.review_list {
+  color: white;
+}
+
 .modal {
   display: none;
   position: fixed;
