--- a/css/background.css
+++ b/css/background.css
@@ -139,11 +139,12 @@ body {
 
 #submit-btn {
 	font-weight: bold;
-	border: none;
 	padding: 12px 16px;
 	font-size: 18px;
 	cursor: pointer;
 	font-family: 'Poppins', sans-serif;
+	border: 1px solid black;
+  	border-radius: 50px;
 }
 
 #submit-btn:hover {
@@ -153,11 +154,12 @@ body {
 
 #retake-btn {
 	font-weight: bold;
-	border: none;
 	padding: 12px 16px;
 	font-size: 18px;
 	cursor: pointer;
 	font-family: 'Poppins', sans-serif;
+	border: 1px solid black;
+  	border-radius: 50px;
 }
 
 #retake-btn:hover {
@@ -166,9 +168,11 @@ body {
 }
 
 .btn-agree {
-	color: #000;
+	color: black;
 	font-weight: bold;
 	margin: 3px;
+	border: 1px solid black;
+  	border-radius: 50px;
 }
 .btn-agree.active,
 .btn-agree:active,
@@ -178,6 +182,7 @@ body {
 .btn-agree:hover {
 	background-color: RoyalBlue;
 	transition: all 0.25s ease;
+	cursor: pointer;
 }
 
 @media screen and (max-width: 940px) {
